--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+# custom 
+build/*.js
+npm-debug.log
+.DS_Store
+clientSecret.js
+
 
 # compiled output
 /dist
