--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "start": "NODE_ENV=production nodemon server/server.js",
     "build": "NODE_ENV=production webpack",
-    "dev": " concurrently \"NODE_ENV=development nodemon server/server.js\" \"NODE_ENV=development webpack-dev-server --open\"",
-    "gulp-prod": "node_modules/.bin/gulp prod",
-    "gulp-dev": "node_modules/.bin/gulp dev"
+    "dev": " concurrently \"NODE_ENV=development nodemon server/server.js\" \"NODE_ENV=development webpack-dev-server --open\""
   },
   "nodemonConfig": {
     "ignore": [
@@ -19,6 +17,7 @@
   "author": "Kyle Saunders",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.1",
     "browserify": "^17.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -30,6 +29,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^6.5.0",
     "redux": "^4.0.5",
     "request": "^2.88.2",
     "webpack": "^5.57.1"
@@ -42,7 +42,6 @@
     "concurrently": "^6.0.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.2",
-    "gulp": "^4.0.2",
     "html-webpack-plugin": "^5.5.0",
     "isomorphic-fetch": "^3.0.0",
     "mini-css-extract-plugin": "^2.7.1",
