--- a/package.json
+++ b/package.json
@@ -42,16 +42,20 @@
     "concurrently": "^6.0.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.2",
+    "daisyui": "^2.6.0",
     "html-webpack-plugin": "^5.5.0",
     "isomorphic-fetch": "^3.0.0",
     "mini-css-extract-plugin": "^2.7.1",
     "nodemon": "^2.0.7",
+    "postcss": "^8.4.7",
+    "postcss-loader": "^6.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
+    "tailwindcss": "^3.0.23",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.11.1"
