--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Kyle Saunders",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.1",
     "browserify": "^17.0.0",
     "cookie-parser": "^1.4.6",
@@ -28,7 +29,7 @@
     "querystring": "^0.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.2",
+    "react-redux": "^7.2.9",
     "react-router-dom": "^6.5.0",
     "redux": "^4.0.5",
     "request": "^2.88.2",
