--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "adding another level to your listening experience",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production nodemon server/server.js",
-    "build": "NODE_ENV=production webpack",
-    "dev": " concurrently \"NODE_ENV=development nodemon server/server.js\" \"NODE_ENV=development webpack-dev-server --open\"",
-    "test": "jest --verbose --update-snapshot"
+    "dev:docker": "nodemon ./src/server/server.js & webpack-dev-server --open --hot",
+    "build:docker": "webpack",
+    "dev": "concurrently \"cross-env NODE_ENV=development PROXY_HOST=localhost webpack-dev-server --open \" \"nodemon ./src/server/server.js\"",
+    "build": "cross-env NODE_ENV=production webpack",
+    "start": "cross-env NODE_ENV=production nodemon ./src/server/server.js",
+    "test": "NODE_ENV=test jest --verbose --updateSnapshot --coverage"
   },
   "nodemonConfig": {
     "ignore": [
@@ -23,6 +25,7 @@
     "browserify": "^17.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.12.3",
     "node-fetch": "^3.3.0",
     "pg": "^8.8.0",
@@ -61,6 +64,7 @@
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
+    "source-map-loader": "^4.0.1",
     "style-loader": "^3.3.1",
     "supertest": "^6.2.3",
     "tailwindcss": "^3.0.23",
