add lodash debounce

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.12.3",
+    "lodash": "^4.17.21",
     "node-fetch": "^3.3.0",
     "pg": "^8.8.0",
     "prop-types": "^15.6.1",
