--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   "license": "ISC",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
+    "autoprefixer": "^10.4.13",
     "axios": "^1.2.1",
     "browserify": "^17.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.12.3",
+    "express": "^4.17.3",
     "lodash": "^4.17.21",
     "node-fetch": "^3.3.0",
     "pg": "^8.8.0",
@@ -34,10 +34,9 @@
     "querystring": "^0.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.4.0",
     "react-redux": "^7.2.9",
-    "react-router-dom": "^6.5.0",
-    "request": "^2.88.2",
-    "webpack": "^5.57.1"
+    "react-router-dom": "^6.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
